fix position, alignment and coloring of navbar

--- a/src/components/navbar.css
+++ b/src/components/navbar.css
@@ -1,5 +1,5 @@
 .cont {
-  position: relative;
+  position: absolute;
   width: 100%;
   display: flex;
   justify-content: space-between;
@@ -140,7 +140,7 @@
     position: fixed;
     top: 0;
     left: -300px;
-    /*background: rgb(247, 245, 250);*/
+    background: rgb(247, 245, 250);
     width: 300px;
     height: 100%;
     padding-top: 65px;
